Completed Virtru Main post with images

--- a/_posts/portfolio/2013-03-06-virtru.md
+++ b/_posts/portfolio/2013-03-06-virtru.md
@@ -22,7 +22,7 @@ This was always the key question for Virtru. The solution, is an ongoing effort,
 
 ## Just turn it on!
 
-*a picture of the virtru switch*
+{% include figure.html image_asset="/assets/virtru_main_switch.png" image_caption="" %}
 
 Switches are an interaction pattern that everyone encounters on a daily basis. It represents a change in a status. For example, a dark room, can become a bright room with a flip of a switch. 
 
@@ -30,21 +30,16 @@ Virtru takes advantage of this existing pattern for its email encryption service
 
 While PGP required users to exchange encryption keys and go through a lengthy setup, Virtru has always sought to abstract the technically difficult part, so that the only thing users needed to worry about was if they wanted a message encrypted or not. 
 
-*images of send secure vs send buttons*
+{% include figure.html image_asset="/assets/virtru_main_earlymock.jpg" image_caption="A very early mockup of Virtru." %}
 
-Initially, we experimented with a dual send button paradigm. After prototyping and some feedback, we discovered that this presented a few issues:
+Initially, we experimented with a dual send button paradigm and a switch along the top of the window. After some prototyping and feedback, we discovered that this presented a few issues:
 * With two send action buttons of equal importance, users could easily confuse one for the other. 
 * At the point of hitting send, users were not usually thinking about encrypting a message, but rather simply getting the message sent
-* It did not protect drafts
+* Users assumed that ALL the content was encrypted whenever they hit the switch. 
 
-*image of windowed switch*
+{% include figure.html image_asset="/assets/virtru_main_switch_example.gif" image_caption="When the switch is flipped, the entire compose area turns blue to signify it is not encrypted" %}
 
-So, we tried out a switch that would sit on top of all elements. This solved many of the previous problems, but it also introduced a new problem:
-* Now, users assumed that ALL the content was encrypted whenever they hit the switch. 
-
-*image of switch in action*
-
-To solve the final problem, we knew we had to narrow the visual scope of what the switch affected. At the same time, Gmail also changed the UI of composing new messages to be contained within a modal that sat above all content. Thus, the solution was to place the switchin within that modal. This proved to be very successful.
+To solve the problem, we knew we had to narrow the visual scope of what the switch affected. At the same time, Gmail also changed the UI of composing new messages to be contained within a modal that sat above all content. Thus, the solution was to place the switchin within that modal. This proved to be very successful.
 
 ## Work within an external system
 
@@ -56,7 +51,7 @@ This applied to everything beyond the switch as well. Users loved and were used 
 
 Therefore, the solution was to add features and functions into various services by closely integrating with the existing design language. This involved a lot of research as well as close collaboration with the development team to work around limitations, but still make sense to users of that email service. 
 
-*images that compare owa vs gmail vs outlook desktop implementation of the switch*
+{% include figure.html image_asset="/assets/virtru_main_switch_comparison.png" image_caption="The switch looks a bit different when integrated with different services. Left - Gmail, Center - Outlook Web App, Right - Outlook Desktop 2016" %}
 
 ## Recognizeable between systems
 
@@ -64,7 +59,9 @@ While Virtru did follow the design language of the service it was integrating wi
 
 This underlying system was mostly on the development side, but on the UX side, it did manifest itself through the use of similar icons, the same type of copy, and other ancillary elements (such as transactional emails) that allows users to acclimate to Virtru as a brand. 
 
-*images of icons and other images of how Virtru can be recognized across platforms*
+{% include figure.html image_asset="/assets/virtru_main_icon_comparison.png" image_caption="Certain elements had to be recognizeable across integrations. Here is an example of how Virtru's iconography carried across different email clients. From left to right: Gmail, Outlook Web App, Outlook 2016, iOS app." %}
+
+{% include figure.html image_asset="/assets/virtru3.png" image_caption="A broader look at Virtru's iconography." %}
 
 ## Additional images about Virtru's system
 
@@ -73,7 +70,5 @@ Virtru's approach to UX is constantly evolving, but so far this has allowed Virt
 Here are a few more images that sample Virtru's Design system. 
 
 {% include figure.html image_asset="/assets/virtru2.png" image_caption="" %}
-
-{% include figure.html image_asset="/assets/virtru3.png" image_caption="" %}
 
 {% include figure.html image_asset="/assets/virtru4.png" image_caption="" %}
