Completed revisions for first time reader experience

--- a/_posts/portfolio/2013-03-06-virtru.md
+++ b/_posts/portfolio/2013-03-06-virtru.md
@@ -37,7 +37,7 @@ Initially, we experimented with a dual send button paradigm and a switch along t
 * At the point of hitting send, users were not usually thinking about encrypting a message, but rather simply getting the message sent
 * Users assumed that ALL the content was encrypted whenever they hit the switch. 
 
-{% include figure.html image_asset="/assets/virtru_main_switch_example.gif" image_caption="When the switch is flipped, the entire compose area turns blue to signify it is not encrypted" %}
+{% include figure.html image_asset="/assets/virtru_main_switch_example.gif" image_caption="When the switch is flipped, the entire compose area turns blue to signify it is encrypted" %}
 
 To solve the problem, we knew we had to narrow the visual scope of what the switch affected. At the same time, Gmail also changed the UI of composing new messages to be contained within a modal that sat above all content. Thus, the solution was to place the switchin within that modal. This proved to be very successful.
 
