Updated Cork post with link to website

--- a/_posts/explorations/2017-12-01-cork.md
+++ b/_posts/explorations/2017-12-01-cork.md
@@ -2,7 +2,7 @@
 title:  "Cork - Learning SVGs and some build tools"
 description: Virtru developers decided to open source a particular build tool. In an effort to teach myself about SVGs, CSS animations, and Build Tools (node.js, sass compiliers), I took it upon myself to create a landing page for the project.
 goal: Learn about SVG art creation, css animations, build tools 
-results: It took a few weeks, but I learned a lot about SVGs and build tools 
+results: It took a few weeks, but I learned a lot about SVGs and build tools. <a href="https://virtru.github.io/cork/">Check it out.</a>
 role: Art Direction, UI/UX Design, Illustrations, Front-end Development
 year: '2017'
 layout: work
